Added redis adapter + some new functionality