@@ -1,7 +1,8 @@
 package com.hurricache.client.standalone.simple;
 
 import com.hurricache.TestBase;
-import com.hurricache.grpc.KeyHint;
+import com.hurricache.client.intf.KeyHintData;
+import com.hurricache.client.intf.Payload;
 import io.grpc.Status;
 import io.grpc.StatusRuntimeException;
 import org.junit.jupiter.api.Assertions;
@@ -21,48 +22,73 @@ public class QueueOperationsTest extends TestBase {
         String second = "message2";
 
         // 1. createQueue with initial value
-        KeyHint keyHint = client.createQueue(qKey, List.of(first.getBytes(StandardCharsets.UTF_8))).get();
-        KeyHint createRes = keyHint;
-        Assertions.assertNotNull(createRes);
+        KeyHintData keyHint = client.createQueue(
+                qKey,
+                List.of(Payload.of(first.getBytes(StandardCharsets.UTF_8)))
+        ).get();
+        Assertions.assertNotNull(keyHint);
 
         // 2. addElementToTail
-        boolean added = client.addElementToTail(qKey, keyHint, List.of(second.getBytes(StandardCharsets.UTF_8))).get();
-
+        boolean added = client.addElementToTail(
+                qKey,
+                keyHint,
+                List.of(Payload.of(second.getBytes(StandardCharsets.UTF_8)))
+        ).get();
         Assertions.assertTrue(added);
 
         // 3. getHead (Peek without removing)
-        byte[] headData = client.getHead(qKey).get();
-        Assertions.assertEquals(first, new String(headData));
+        Payload headData = client.getHead(qKey, keyHint).get();
+        Assertions.assertNotNull(headData);
+        Assertions.assertEquals(first, new String(headData.getValue(), StandardCharsets.UTF_8));
 
         // 4. getAndRemoveFront (Atomic pop from head)
-        byte[] popped = client.getAndRemoveFront(qKey).get();
-        Assertions.assertEquals(first, new String(popped));
+        Payload popped = client.getAndRemoveFront(qKey, keyHint).get();
+        Assertions.assertNotNull(popped);
+        Assertions.assertEquals(first, new String(popped.getValue(), StandardCharsets.UTF_8));
 
         // 5. Verify the new head is the second message
-        byte[] newHeadData = client.getHead(qKey).get();
-        Assertions.assertEquals(second, new String(newHeadData));
+        Payload newHeadData = client.getHead(qKey, keyHint).get();
+        Assertions.assertNotNull(newHeadData);
+        Assertions.assertEquals(second, new String(newHeadData.getValue(), StandardCharsets.UTF_8));
 
         // 6. removeHead (Delete without returning data)
-        boolean removed = client.removeHead(qKey).get();
+        boolean removed = client.removeHead(qKey, keyHint).get();
         Assertions.assertTrue(removed);
 
         // 7. Verify Queue is now empty or key doesn't exist
-
-        byte[] empty = client.getHead(qKey).get();
-        Assertions.assertEquals(0, empty.length);
-
+        Payload empty = client.getHead(qKey, keyHint).get();
+        Assertions.assertTrue(empty == null || empty.getValue().length == 0);
     }
 
     @Test
     void testQueueOrderPersistence() throws ExecutionException, InterruptedException {
         String qKey = "orderTestQueue";
-        KeyHint keyHint = client.createQueue(qKey, List.of("1".getBytes())).get();
-        client.addElementToTail(qKey, keyHint, Arrays.asList("2".getBytes(), "3".getBytes())).get();
+        KeyHintData keyHint = client.createQueue(
+                qKey,
+                List.of(Payload.of("1".getBytes(StandardCharsets.UTF_8)))
+        ).get();
+
+        client.addElementToTail(
+                qKey,
+                keyHint,
+                Arrays.asList(
+                        Payload.of("2".getBytes(StandardCharsets.UTF_8)),
+                        Payload.of("3".getBytes(StandardCharsets.UTF_8))
+                )
+        ).get();
 
         // FIFO verification: 1 -> 2 -> 3
-        Assertions.assertEquals("1", new String(client.getAndRemoveFront(qKey).get()));
-        Assertions.assertEquals("2", new String(client.getAndRemoveFront(qKey).get()));
-        Assertions.assertEquals("3", new String(client.getAndRemoveFront(qKey).get()));
+        Payload first = client.getAndRemoveFront(qKey, keyHint).get();
+        Payload second = client.getAndRemoveFront(qKey, keyHint).get();
+        Payload third = client.getAndRemoveFront(qKey, keyHint).get();
+
+        Assertions.assertNotNull(first);
+        Assertions.assertNotNull(second);
+        Assertions.assertNotNull(third);
+
+        Assertions.assertEquals("1", new String(first.getValue(), StandardCharsets.UTF_8));
+        Assertions.assertEquals("2", new String(second.getValue(), StandardCharsets.UTF_8));
+        Assertions.assertEquals("3", new String(third.getValue(), StandardCharsets.UTF_8));
     }
 
     @Test
@@ -71,7 +97,12 @@ public class QueueOperationsTest extends TestBase {
 
         // Test addElementToTail on non-existent key
         try {
-            client.addElementToTail(qKey, null, List.of("data".getBytes())).get();
+            client.addElementToTail(
+                    qKey,
+                    null,
+                    List.of(Payload.of("data".getBytes(StandardCharsets.UTF_8)))
+            ).get();
+            Assertions.fail("Expected ExecutionException");
         } catch (ExecutionException e) {
             StatusRuntimeException cause = (StatusRuntimeException) e.getCause();
             Assertions.assertEquals(Status.Code.NOT_FOUND, cause.getStatus().getCode());
